@@ -56,6 +56,7 @@ import org.opencms.ade.containerpage.shared.CmsInheritanceContainer;
 import org.opencms.ade.containerpage.shared.CmsInheritanceInfo;
 import org.opencms.ade.containerpage.shared.CmsLocaleLinkBean;
 import org.opencms.ade.containerpage.shared.CmsRemovedElementStatus;
+import org.opencms.ade.containerpage.shared.CmsReuseInfo;
 import org.opencms.ade.containerpage.shared.rpc.I_CmsContainerpageService;
 import org.opencms.ade.detailpage.CmsDetailPageInfo;
 import org.opencms.ade.detailpage.CmsDetailPageResourceHandler;
@@ -93,6 +94,7 @@ import org.opencms.gwt.shared.CmsListElementCreationDialogData;
 import org.opencms.gwt.shared.CmsListElementCreationOption;
 import org.opencms.gwt.shared.CmsListInfoBean;
 import org.opencms.gwt.shared.CmsModelResourceInfo;
+import org.opencms.gwt.shared.CmsResourceListInfo;
 import org.opencms.gwt.shared.CmsTemplateContextInfo;
 import org.opencms.gwt.shared.I_CmsAutoBeanFactory;
 import org.opencms.gwt.shared.I_CmsListAddMetadata;
@@ -169,6 +171,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -245,19 +248,23 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
          *
          * @param defaultValue the default view id from the session cache
          * @param checkRes the resource used to check permissions
+         * @param templateContextInfo the template context information
          */
         @SuppressWarnings("synthetic-access")
-        public void init(CmsUUID defaultValue, CmsResource checkRes) {
+        public void init(CmsUUID defaultValue, CmsResource checkRes, CmsTemplateContextInfo templateContextInfo) {
 
             Map<CmsUUID, CmsElementViewInfo> result = new LinkedHashMap<CmsUUID, CmsElementViewInfo>();
             CmsObject cms = getCmsObject();
+            String templateKey = templateContextInfo != null ? templateContextInfo.getCurrentContext() : null;
 
             // collect the actually used element view ids
             CmsADEConfigData config = getConfigData(
                 cms.getRequestContext().addSiteRoot(cms.getRequestContext().getUri()));
             Set<CmsUUID> usedIds = new HashSet<CmsUUID>();
             for (CmsResourceTypeConfig typeConfig : config.getResourceTypes()) {
-                usedIds.add(typeConfig.getElementView());
+                if (typeConfig.isAvailableInTemplate(templateKey)) {
+                    usedIds.add(typeConfig.getElementView());
+                }
             }
 
             Locale wpLocale = OpenCms.getWorkplaceManager().getWorkplaceLocale(cms);
@@ -305,6 +312,9 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
         }
     }
 
+    /** Runtime property key to enable / disable placement mode. */
+    public static final String PARAM_PAGE_EDITOR_PLACEMENT_MODE_ENABLED = "pageEditor.placementMode.enabled";
+
     /** Additional info key for storing the "edit small elements" setting on the user. */
     public static final String ADDINFO_EDIT_SMALL_ELEMENTS = "EDIT_SMALL_ELEMENTS";
 
@@ -322,6 +332,9 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
 
     /** Serial version UID. */
     private static final long serialVersionUID = -6188370638303594280L;
+
+    /** Maximum number of reuse locations to display in the reuse warning dialog. */
+    public static final int MAX_VISIBLE_ELEMENT_USES = 100;
 
     /** The configuration data of the current container page context. */
     private CmsADEConfigData m_configData;
@@ -472,6 +485,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
      * @param response the current response
      * @throws Exception if something goes wrong
      */
+    @SuppressWarnings("resource")
     public static void unlockPage(CmsObject cms, HttpServletRequest request, HttpServletResponse response)
     throws Exception {
 
@@ -485,6 +499,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
             LOG.debug("can't unlock page in online project");
             return;
         }
+
         byte[] byteData = CmsFileUtil.readFully(request.getInputStream(), false);
 
         String encoding = request.getCharacterEncoding();
@@ -1175,9 +1190,26 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
         CmsGalleryDataBean data = null;
         try {
             CmsObject cms = getCmsObject();
-
-            CmsAddDialogTypeHelper typeHelper = new CmsAddDialogTypeHelper(CmsResourceTypeConfig.AddMenuType.ade);
             String pageFolderRootPath = cms.getRequestContext().addSiteRoot(uri);
+            CmsADEConfigData config = OpenCms.getADEManager().lookupConfiguration(cms, pageFolderRootPath);
+            Map<String, CmsResourceTypeConfig> typesByName = config.getTypesByName();
+            final String templateContextStr = (templateContextInfo != null)
+                && (templateContextInfo.getCurrentContext() != null) ? templateContextInfo.getCurrentContext() : null;
+            CmsAddDialogTypeHelper typeHelper = new CmsAddDialogTypeHelper(CmsResourceTypeConfig.AddMenuType.ade) {
+
+                @Override
+                protected boolean exclude(CmsResourceTypeBean type) {
+
+                    CmsResourceTypeConfig typeConfig = typesByName.get(type.getType());
+                    if ((typeConfig != null)
+                        && (templateContextStr != null)
+                        && !typeConfig.isAvailableInTemplate(templateContextStr)) {
+                        return true;
+                    }
+                    return false;
+
+                }
+            };
             if (detailContentId != null) {
                 try {
                     CmsResource page = cms.readResource(uri, CmsResourceFilter.IGNORE_EXPIRATION);
@@ -1202,12 +1234,12 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
 
                     public boolean checkEnabled(
                         CmsObject paramCms,
-                        CmsADEConfigData config,
+                        CmsADEConfigData config2,
                         I_CmsResourceType resType) {
 
                         boolean isModelGroup = CmsResourceTypeXmlContainerPage.MODEL_GROUP_TYPE_NAME.equals(
                             resType.getTypeName());
-                        return isModelGroup || config.hasFormatters(paramCms, resType, containers);
+                        return isModelGroup || config2.hasFormatters(paramCms, resType, containers);
                     }
                 });
             CmsGalleryService srv = new CmsGalleryService();
@@ -1407,6 +1439,15 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
                 detailContentId,
                 containers,
                 locale);
+
+            CmsListInfoBean info = new CmsListInfoBean();
+            // type title and subtitle
+            String realType = getServerIdString(resourceType);
+            Locale wpLocale = OpenCms.getWorkplaceManager().getWorkplaceLocale(getCmsObject());
+            info.setTitle(CmsWorkplaceMessages.getResourceTypeName(wpLocale, realType));
+            info.setSubTitle(CmsWorkplaceMessages.getResourceTypeDescription(wpLocale, realType));
+            info.setBigIconClasses(CmsIconUtil.getIconClasses(realType, null, false));
+            result.setListInfo(info);
         } catch (Throwable e) {
             error(e);
         }
@@ -1476,17 +1517,77 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
     }
 
     /**
-     * @see org.opencms.ade.containerpage.shared.rpc.I_CmsContainerpageService#getRemovedElementStatus(java.lang.String, org.opencms.util.CmsUUID)
+     * @see org.opencms.ade.containerpage.shared.rpc.I_CmsContainerpageService#getRemovedElementStatus(java.lang.String, org.opencms.util.CmsUUID, org.opencms.util.CmsUUID)
      */
-    public CmsRemovedElementStatus getRemovedElementStatus(String id, CmsUUID containerpageId) throws CmsRpcException {
+    public CmsRemovedElementStatus getRemovedElementStatus(String id, CmsUUID contextId, CmsUUID containerpageId)
+    throws CmsRpcException {
 
         if ((id == null) || !id.matches(CmsUUID.UUID_REGEX + ".*$")) {
             return new CmsRemovedElementStatus(null, null, false, null);
         }
         try {
             CmsUUID structureId = convertToServerId(id);
-            return internalGetRemovedElementStatus(structureId, containerpageId);
+            return internalGetRemovedElementStatus(structureId, contextId, containerpageId);
         } catch (CmsException e) {
+            error(e);
+            return null;
+        }
+    }
+
+    /**
+     * @see org.opencms.ade.containerpage.shared.rpc.I_CmsContainerpageService#getReuseInfo(org.opencms.util.CmsUUID, org.opencms.util.CmsUUID, org.opencms.util.CmsUUID)
+     */
+    public CmsReuseInfo getReuseInfo(CmsUUID pageId, CmsUUID detailId, CmsUUID elementId) throws CmsRpcException {
+
+        try {
+            CmsObject cms = getCmsObject();
+            Locale locale = OpenCms.getWorkplaceManager().getWorkplaceLocale(cms);
+            CmsResource detailResource = null;
+            CmsResource element = cms.readResource(elementId, CmsResourceFilter.IGNORE_EXPIRATION);
+            if (detailId != null) {
+                detailResource = cms.readResource(detailId, CmsResourceFilter.IGNORE_EXPIRATION);
+            }
+            Set<CmsUUID> idsForCurrentPage = CmsElementUtil.getPageAndDetailOnlyIds(
+                getCmsObject(),
+                pageId,
+                detailResource);
+            List<CmsResource> allUses = OpenCms.getADEManager().getOfflineElementUses(element).filter(
+                res -> !idsForCurrentPage.contains(res.getStructureId())).collect(Collectors.toList());
+            List<CmsResourceListInfo> infos = new ArrayList<>();
+            int visibleCount = 0;
+            for (CmsResource use : allUses) {
+                try {
+                    // make sure resource is visible to current user, otherwise continue with next resource
+                    cms.readResource(use.getStructureId(), CmsResourceFilter.IGNORE_EXPIRATION.addRequireVisible());
+                    visibleCount += 1;
+                    CmsResourceListInfo info = new CmsResourceListInfo();
+                    CmsVfsService.addPageInfo(cms, use, info);
+                    info.setStructureId(use.getStructureId());
+                    infos.add(info);
+                    if (visibleCount >= MAX_VISIBLE_ELEMENT_USES) {
+                        break;
+                    }
+                } catch (CmsVfsResourceNotFoundException | CmsPermissionViolationException e) {
+                    // ignore
+                } catch (Exception e) {
+                    LOG.error(e.getLocalizedMessage(), e);
+                }
+            }
+            CmsListInfoBean elementInfo = CmsVfsService.getPageInfo(cms, element);
+            String message;
+            CmsMessages messages = Messages.get().getBundle(locale);
+            if (allUses.size() > 0) {
+                message = messages.key(Messages.GUI_REUSE_CHECK_WARNING_TEXT_1, "" + allUses.size());
+            } else {
+                message = "";
+            }
+            String title = messages.key(Messages.GUI_REUSE_CHECK_TITLE_0);
+            if (allUses.size() > infos.size()) {
+                message = message + "\n" + messages.key(Messages.GUI_REUSE_CHECK_ONLY_SHOW_N_1, infos.size());
+            }
+            CmsReuseInfo result = new CmsReuseInfo(elementInfo, infos, message, title, allUses.size());
+            return result;
+        } catch (Exception e) {
             error(e);
             return null;
         }
@@ -1522,13 +1623,17 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
      * Internal helper method to get the status of a removed element.<p>
      *
      * @param structureId the structure id of the removed element
+     * @param contextId the id of the resource used to look up the sitemap configuration
      * @param containerpageId the id of the page to exclude from the relation check, or null if no page should be excluded
      *
      * @return the status of the removed element
      *
      * @throws CmsException in case reading the resource fails
      */
-    public CmsRemovedElementStatus internalGetRemovedElementStatus(CmsUUID structureId, CmsUUID containerpageId)
+    public CmsRemovedElementStatus internalGetRemovedElementStatus(
+        CmsUUID structureId,
+        CmsUUID contextId,
+        CmsUUID containerpageId)
     throws CmsException {
 
         CmsObject cms = getCmsObject();
@@ -1541,6 +1646,9 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
         boolean isSystemResource = elementResource.getRootPath().startsWith(CmsResource.VFS_FOLDER_SYSTEM + "/");
         CmsRelationFilter relationFilter = CmsRelationFilter.relationsToStructureId(structureId);
         List<CmsRelation> relationsToElement = cms.readRelations(relationFilter);
+        for (CmsRelation relation : relationsToElement) {
+            System.out.println("FROM: " + relation.getSourcePath() + " TYPE: " + relation.getType().getName());
+        }
         Iterator<CmsRelation> iter = relationsToElement.iterator();
 
         // ignore XML_STRONG (i.e. container element) relations from the container page, this must be checked on the client side.
@@ -1553,15 +1661,20 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
             }
         }
         ElementDeleteMode elementDeleteMode = null;
-        CmsResource pageResource = cms.readResource(containerpageId, CmsResourceFilter.IGNORE_EXPIRATION);
-        CmsADEConfigData adeConfig = OpenCms.getADEManager().lookupConfiguration(cms, pageResource.getRootPath());
-        CmsResourceTypeConfig typeConfig = adeConfig.getResourceType(
-            OpenCms.getResourceManager().getResourceType(elementResource).getTypeName());
+        if (contextId != null) {
+            CmsResource contextResource = cms.readResource(contextId, CmsResourceFilter.IGNORE_EXPIRATION);
+            CmsADEConfigData adeConfig = OpenCms.getADEManager().lookupConfiguration(
+                cms,
+                contextResource.getRootPath());
+            CmsResourceTypeConfig typeConfig = adeConfig.getResourceType(
+                OpenCms.getResourceManager().getResourceType(elementResource).getTypeName());
 
-        if (typeConfig != null) {
-            elementDeleteMode = typeConfig.getElementDeleteMode();
+            if (typeConfig != null) {
+                elementDeleteMode = typeConfig.getElementDeleteMode();
+            }
+        } else {
+            elementDeleteMode = ElementDeleteMode.askKeep;
         }
-
         boolean hasNoRelations = relationsToElement.isEmpty();
         boolean deletionCandidate = hasNoRelations && hasWritePermissions && !isSystemResource;
         CmsListInfoBean elementInfo = CmsVfsService.getPageInfo(cms, elementResource);
@@ -1622,7 +1735,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
                 request.getSession());
             CmsUUID detailContainerPageId = null;
             if (detailResource != null) {
-                locationCache.setPageEditorResource(cms.getRequestContext().getSiteRoot(), detailResource);
+                locationCache.setPageEditorResource(cms, cms.getRequestContext().getSiteRoot(), detailResource);
                 CmsObject rootCms = OpenCms.initCmsObject(cms);
                 rootCms.getRequestContext().setSiteRoot("");
                 String detailResourcePath = detailResource.getRootPath();
@@ -1651,7 +1764,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
                 }
             } else {
                 if (!isModelPage && !isEditingModelGroup) {
-                    locationCache.setPageEditorResource(cms.getRequestContext().getSiteRoot(), containerPage);
+                    locationCache.setPageEditorResource(cms, cms.getRequestContext().getSiteRoot(), containerPage);
                     sessionStorageData.put(
                         CmsGwtConstants.LAST_CONTAINER_PAGE_ID,
                         containerPage.getStructureId().toString());
@@ -1675,7 +1788,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
                 LOG.info("Invalid reuse mode : " + reuseModeString, e);
             }
             InitialElementViewProvider viewHelper = new InitialElementViewProvider();
-            viewHelper.init(getSessionCache().getElementView(), containerPage);
+            viewHelper.init(getSessionCache().getElementView(), containerPage, info);
             CmsLocaleGroup group = cms.getLocaleGroupService().readLocaleGroup(containerPage);
             Locale mainLocale = null;
 
@@ -1774,6 +1887,11 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
                     || Boolean.valueOf(param).booleanValue();
             }
             data.setAllowSettingsInEditor(allowSettingsInEditor);
+            String placementModeEnabledStr = (String)OpenCms.getRuntimeProperty(
+                PARAM_PAGE_EDITOR_PLACEMENT_MODE_ENABLED);
+            boolean placementModeEnabled = (placementModeEnabledStr == null)
+                || Boolean.parseBoolean(placementModeEnabledStr);
+            data.setPlacementModeEnabled(placementModeEnabled);
             data.setSessionStorageData(sessionStorageData);
         } catch (Throwable e) {
             error(e);
@@ -1862,7 +1980,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
      */
     public void saveClipboardTab(int tabIndex) {
 
-        getRequest().getSession().setAttribute(ATTR_CLIPBOARD_TAB, new Integer(tabIndex));
+        getRequest().getSession().setAttribute(ATTR_CLIPBOARD_TAB, Integer.valueOf(tabIndex));
     }
 
     /**
@@ -2204,30 +2322,6 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
     }
 
     /**
-     * @see org.opencms.ade.containerpage.shared.rpc.I_CmsContainerpageService#updateServerElementFormatter(java.lang.String, java.lang.String, java.util.Map)
-     */
-    public void updateServerElementFormatter(String clientId, String containerId, Map<String, String> clientSettings)
-    throws CmsRpcException {
-
-        try {
-            CmsContainerElementBean elementBean = getSessionCache().getCacheContainerElement(clientId);
-            if (elementBean != null) {
-                HashMap<String, String> newSettings = new HashMap<>(elementBean.getIndividualSettings());
-                String key = CmsFormatterConfig.getSettingsKeyForContainer(containerId);
-                String formatterId = clientSettings.get(key);
-                if (formatterId != null) {
-                    newSettings.put(key, formatterId);
-                }
-                elementBean = CmsContainerElementBean.cloneWithSettings(elementBean, newSettings);
-                getSessionCache().setCacheContainerElement(elementBean.editorHash(), elementBean);
-            }
-
-        } catch (Exception e) {
-            error(e);
-        }
-    }
-
-    /**
      * Gets the settings which should be updated for an element in the DND case.<p>
      *
      * @param config the sitemap configuration
@@ -2246,6 +2340,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
         String dndContainer) {
 
         Map<String, String> result = Maps.newHashMap();
+
         if (dndContainer == null) {
             return result;
         }
@@ -2327,10 +2422,11 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
             if (idString != null) {
                 // the formatter setting has changed
                 I_CmsResourceType resType = OpenCms.getResourceManager().getResourceType(elementBean.getResource());
-                getSessionCache().addRecentFormatter(resType.getTypeName(), idString);
+                if (!(resType instanceof CmsResourceTypeFunctionConfig)) {
+                    getSessionCache().addRecentFormatter(resType.getTypeName(), idString);
+                }
             }
         }
-
     }
 
     /**
@@ -2731,6 +2827,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
                 if (!dndSettings.isEmpty()) {
                     CmsContainerElementBean dndElementBean = overrideSettings(element, dndSettings);
                     getSessionCache().setCacheContainerElement(dndElementBean.editorHash(), dndElementBean);
+                    element = dndElementBean;
                     dndId = dndElementBean.editorHash();
                     Map<String, CmsContainerElementData> dndResults = getElements(
                         config,
@@ -2751,7 +2848,6 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
             if (elementData == null) {
                 continue;
             }
-            // make sure the element with it's current settings is cached
             getSessionCache().setCacheContainerElement(element.editorHash(), element);
             elementData.setDndId(dndId);
             result.put(entry.getKey(), elementData);
@@ -3168,7 +3264,7 @@ public class CmsContainerpageService extends CmsGwtService implements I_CmsConta
         Set<CmsUUID> removedElementIds = Sets.difference(oldElementIds, newElementIds);
         List<CmsRemovedElementStatus> deletionCandidateStatuses = new ArrayList<CmsRemovedElementStatus>();
         for (CmsUUID removedId : removedElementIds) {
-            CmsRemovedElementStatus status = internalGetRemovedElementStatus(removedId, null);
+            CmsRemovedElementStatus status = internalGetRemovedElementStatus(removedId, null, null);
             if (status.isDeletionCandidate()) {
                 deletionCandidateStatuses.add(status);
             }
