@@ -58,7 +58,10 @@ import org.opencms.util.CmsRequestUtil;
 import org.opencms.util.CmsStringUtil;
 import org.opencms.util.CmsUUID;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.util.ArrayList;
@@ -71,6 +74,8 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.jsp.PageContext;
 
+import org.apache.commons.compress.archivers.zip.ZipArchiveEntry;
+import org.apache.commons.compress.archivers.zip.ZipFile;
 import org.apache.commons.fileupload.FileItem;
 import org.apache.commons.fileupload.FileUploadBase.FileSizeLimitExceededException;
 import org.apache.commons.fileupload.FileUploadBase.SizeLimitExceededException;
@@ -79,6 +84,8 @@ import org.apache.commons.fileupload.servlet.ServletFileUpload;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.logging.Log;
 
+import com.google.common.collect.HashMultimap;
+
 /**
  * Bean to be used in JSP scriptlet code that provides
  * access to the upload functionality.<p>
@@ -86,6 +93,22 @@ import org.apache.commons.logging.Log;
  * @since 8.0.0
  */
 public class CmsUploadBean extends CmsJspBean {
+
+    /**
+     * Supplies an input stream (used by the virus scanning mechanism).
+     */
+    private interface InputStreamProvider {
+
+        /**
+         * Gets the input stream.
+         *
+         * <p>Don't call this more than once.
+         *
+         * @return the input stream
+         * @throws IOException if something IO related fails
+         */
+        InputStream getStream() throws IOException;
+    }
 
     /** The default upload timeout. */
     public static final int DEFAULT_UPLOAD_TIMEOUT = 20000;
@@ -117,6 +140,9 @@ public class CmsUploadBean extends CmsJspBean {
     /** A CMS context for the root site. */
     private CmsObject m_rootCms;
 
+    /** The virus scanner instance to use for uploads. */
+    private I_CmsVirusScanner m_scanner;
+
     /** The server side upload delay. */
     private int m_uploadDelay;
 
@@ -124,6 +150,9 @@ public class CmsUploadBean extends CmsJspBean {
     private String m_uploadHook;
 
     private CmsUploadRestrictionInfo m_uploadRestrictionInfo;
+
+    /** The viruses found while processing the uploads, with the file names as keys. */
+    private HashMultimap<String, String> m_viruses = HashMultimap.create();
 
     /**
      * Constructor, with parameters.<p>
@@ -144,6 +173,9 @@ public class CmsUploadBean extends CmsJspBean {
         m_rootCms.getRequestContext().setSiteRoot("");
         m_uploadRestrictionInfo = OpenCms.getWorkplaceManager().getUploadRestriction().getUploadRestrictionInfo(
             m_rootCms);
+        if (OpenCms.getWorkplaceManager().isVirusScannerEnabled()) {
+            m_scanner = OpenCms.getWorkplaceManager().getVirusScanner();
+        }
     }
 
     /**
@@ -261,6 +293,9 @@ public class CmsUploadBean extends CmsJspBean {
         // get the target folder
         String targetFolder = getTargetFolder(cms);
         m_uploadHook = OpenCms.getWorkplaceManager().getUploadHook(cms, targetFolder);
+        if (m_scanner != null) {
+            m_scanner.test();
+        }
 
         List<String> filesToUnzip = getFilesToUnzip();
 
@@ -274,25 +309,62 @@ public class CmsUploadBean extends CmsJspBean {
                 // determine the new resource name
                 String fileName = m_parameterMap.get(
                     fileItem.getFieldName() + I_CmsUploadConstants.UPLOAD_FILENAME_ENCODED_SUFFIX)[0];
-                fileName = URLDecoder.decode(fileName, "UTF-8");
+                String originalFileName = m_parameterMap.get(
+                    fileItem.getFieldName() + I_CmsUploadConstants.UPLOAD_ORIGINAL_FILENAME_ENCODED_SUFFIX)[0];
+                String context = "(file: " + originalFileName + ")";
+                List<String> viruses = scan(context, content);
 
-                if (filesToUnzip.contains(CmsResource.getName(fileName.replace('\\', '/')))) {
-                    // import the zip
-                    CmsImportFolder importZip = new CmsImportFolder();
-                    try {
-                        importZip.importZip(content, targetFolder, cms, false);
-                    } finally {
-                        // get the created resource names
-                        for (CmsResource importedResource : importZip.getImportedResources()) {
+                fileName = URLDecoder.decode(fileName, "UTF-8");
+                originalFileName = URLDecoder.decode(originalFileName, "UTF-8");
+                if (viruses.size() > 0) {
+                    m_viruses.putAll(originalFileName, viruses);
+                } else {
+                    if (filesToUnzip.contains(CmsResource.getName(fileName.replace('\\', '/')))) {
+
+                        // scan all contents of ZIP before creating anything in the VFS
+                        boolean foundVirus = false;
+                        try {
+                            ZipFile zip = ZipFile.builder().setByteArray(content).get();
+                            for (ZipArchiveEntry entry : (Iterable<ZipArchiveEntry>)() -> zip.getEntries().asIterator()) {
+                                if (entry.isDirectory() || entry.isUnixSymlink()) {
+                                    continue;
+                                }
+                                String zipEntryContext = "(file: "
+                                    + originalFileName
+                                    + ", entry: "
+                                    + entry.getName()
+                                    + ")";
+                                viruses = scan(zipEntryContext, zip, entry);
+                                if (viruses.size() > 0) {
+                                    foundVirus = true;
+                                    m_viruses.putAll(originalFileName, viruses);
+                                    break;
+                                }
+                            }
+                        } catch (IOException e) {
+                            LOG.error(e.getLocalizedMessage(), e);
+                        }
+                        if (foundVirus) {
+                            continue;
+                        }
+
+                        // import the zip
+                        CmsImportFolder importZip = new CmsImportFolder();
+                        try {
+                            importZip.importZip(content, targetFolder, cms, false);
+                        } finally {
+                            // get the created resource names
+                            for (CmsResource importedResource : importZip.getImportedResources()) {
+                                m_resourcesCreated.put(importedResource.getStructureId(), importedResource.getName());
+                            }
+                        }
+                    } else {
+                        // create the resource
+                        CmsResource importedResource = createSingleResource(cms, fileName, targetFolder, content);
+                        if (importedResource != null) {
+                            // add the name of the created resource to the list of successful created resources
                             m_resourcesCreated.put(importedResource.getStructureId(), importedResource.getName());
                         }
-                    }
-                } else {
-                    // create the resource
-                    CmsResource importedResource = createSingleResource(cms, fileName, targetFolder, content);
-                    if (importedResource != null) {
-                        // add the name of the created resource to the list of successful created resources
-                        m_resourcesCreated.put(importedResource.getStructureId(), importedResource.getName());
                     }
                 }
 
@@ -517,6 +589,14 @@ public class CmsUploadBean extends CmsJspBean {
             result.put(I_CmsUploadConstants.KEY_UPLOADED_FILES, new JSONArray(m_resourcesCreated.keySet()));
 
             result.put(I_CmsUploadConstants.KEY_UPLOADED_FILE_NAMES, new JSONArray(m_resourcesCreated.values()));
+
+            JSONObject virusWarnings = new JSONObject();
+            for (String filename : m_viruses.keys()) {
+                JSONArray viruses = new JSONArray(new ArrayList<>(m_viruses.get(filename)));
+                virusWarnings.put(filename, viruses);
+            }
+            result.put(I_CmsUploadConstants.ATTR_VIRUS_WARNINGS, virusWarnings);
+
             if (m_uploadHook != null) {
                 result.put(I_CmsUploadConstants.KEY_UPLOAD_HOOK, m_uploadHook);
             }
@@ -708,15 +788,15 @@ public class CmsUploadBean extends CmsJspBean {
             return CmsCollectionsGenericWrapper.list(fu.parseRequest(getRequest()));
         } catch (SizeLimitExceededException e) {
             // request size is larger than maximum allowed request size, throw an error
-            Integer actualSize = new Integer((int)(e.getActualSize() / 1024));
-            Integer maxSize = new Integer((int)(e.getPermittedSize() / 1024));
+            Integer actualSize = Integer.valueOf((int)(e.getActualSize() / 1024));
+            Integer maxSize = Integer.valueOf((int)(e.getPermittedSize() / 1024));
             throw new CmsUploadException(
                 m_bundle.key(org.opencms.ade.upload.Messages.ERR_UPLOAD_REQUEST_SIZE_LIMIT_2, actualSize, maxSize),
                 e);
         } catch (FileSizeLimitExceededException e) {
             // file size is larger than maximum allowed file size, throw an error
-            Integer actualSize = new Integer((int)(e.getActualSize() / 1024));
-            Integer maxSize = new Integer((int)(e.getPermittedSize() / 1024));
+            Integer actualSize = Integer.valueOf((int)(e.getActualSize() / 1024));
+            Integer maxSize = Integer.valueOf((int)(e.getPermittedSize() / 1024));
             throw new CmsUploadException(
                 m_bundle.key(
                     org.opencms.ade.upload.Messages.ERR_UPLOAD_FILE_SIZE_LIMIT_3,
@@ -737,4 +817,64 @@ public class CmsUploadBean extends CmsJspBean {
         getRequest().getSession().removeAttribute(SESSION_ATTRIBUTE_LISTENER_ID);
         m_listeners.remove(listenerId);
     }
+
+    /**
+     * Scans a byte buffer for viruses if possible.
+     * @param data the file data
+     * @return the list of detected viruses
+     */
+    private List<String> scan(String context, byte[] data) {
+
+        return scanInternal(context, () -> new ByteArrayInputStream(data));
+    }
+
+    /**
+     * Scans a zip file entry for viruses if possible.
+     * @param zip the zip file
+     * @param entry the entry
+     * @return the list of detected viruses
+     */
+    private List<String> scan(String context, ZipFile zip, ZipArchiveEntry entry) {
+
+        return scanInternal(context, () -> zip.getInputStream(entry));
+    }
+
+    /**
+     * Internal helper method for calling the virus scanner implementation and handling logging.
+     *
+     * @param context the context string to include into the log; contains information about what is being scanned
+     * @param streamProvider supplier for the data stream to be scanned
+     *
+     * @return the list of found virus names
+     */
+    private List<String> scanInternal(String context, InputStreamProvider streamProvider) {
+
+        if (m_scanner != null) {
+            List<String> result = null;
+            long t1 = System.currentTimeMillis();
+            try (InputStream stream = streamProvider.getStream()) {
+                result = m_scanner.scan(stream);
+            } catch (IOException e) {
+                result = Collections.emptyList();
+            } finally {
+                long t2 = System.currentTimeMillis();
+                CmsVirusScannerLog.LOG.debug("Virus scan in context " + context + " took " + (t2 - t1) + "ms");
+            }
+            if (result.isEmpty()) {
+                CmsVirusScannerLog.LOG.info("Found no viruses, context=" + context);
+            } else {
+                CmsVirusScannerLog.LOG.warn(
+                    "Found viruses: "
+                        + result
+                        + ", context="
+                        + context
+                        + ", user="
+                        + getCmsObject().getRequestContext().getCurrentUser().getName());
+            }
+            return result;
+        } else {
+            return Collections.emptyList();
+        }
+    }
+
 }
